fix: card button: correct like and heart icon gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -219,7 +219,7 @@ or ( -webkit-text-stroke: 1px var(--background-color,#fff))) {
 .card__buttons {
   align-self: flex-end;
   display: flex;
-  gap:12px;
+  gap:6px;
   align-items: center;
 }
 
@@ -267,13 +267,16 @@ or ( -webkit-text-stroke: 1px var(--background-color,#fff))) {
 }
 
 .card__icon-button {
-  width: 31px;
-  height: 31px;
+  width: 38px;
+  height: 38px;
   aspect-ratio: 1;
+
+  
 }
 
-.card__icon-button:focus-visible {
+.card__icon-button {
   outline: 2px solid currentColor;
+ 
 }
 
 .like-icon {
